change the item and its name

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -20,11 +20,11 @@
 
     <div class="box">
 
-        <% for(x in item){%>
+        <% for(x in newListItem){%>
             <div class="item">
                 <input type="checkbox">
                 <p>
-                    <%=item[x] %>
+                    <%=newListItem[x]%>
                 </p>
             </div>
 
