--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,11 @@
 html {
-  background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg,  rgb(3, 82, 161) 50%, rgb(1, 61, 120) 50%);
-  min-height: 100vh;
+  background-color:rgb(0, 69, 137);
+  max-width: auto;
+  width: auto;
   font-family: 'helvetica neue';
 
 }
+
 h1 {
   color: #fff;
   padding: 10px;
@@ -19,7 +20,7 @@ h1 {
 }
 
 #heading {
-  background-color:  rgb(0, 69, 137);
+  background-color: rgb(0, 69, 137);
   text-align: center;
 }
 
@@ -41,8 +42,13 @@ input:checked+p {
 
 input[type="checkbox"] {
   margin: 20px;
+  
 }
 
+.largecheckbox {
+  width: 25px;
+  height: 25px;
+}
 p {
   margin: 0;
   padding: 20px;
@@ -51,7 +57,7 @@ p {
   color: rgb(0, 69, 137)
 }
 
-form {
+form.item {
   text-align: center;
   margin-left: 20px;
 }
@@ -66,11 +72,12 @@ button {
   font-size: 30px;
   padding-bottom: 6px;
   border-width: 0;
+  margin-left: 18px;
 }
 
 input[type="text"] {
   text-align: center;
-  height: 60px;
+  height: 50px;
   top: 10px;
   border: none;
   background: transparent;
@@ -81,7 +88,8 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 rgb(0, 69, 137);
+  /* border: #E4E9FD 2px ridge; */
+  /* box-shadow: inset 0 -3px 0 0 rgb(0, 69, 137); */
 }
 
 ::placeholder {
@@ -94,9 +102,10 @@ footer {
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
 }
-h3{
-  text-align:center;
-  color:rgb(255, 255, 255);
-  
+
+h2 {
+  text-align: center;
+  color: rgb(255, 255, 255);
+
 
 }
