--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,10 @@
 html {
-  background-color:rgb(0, 69, 137);
+  background-color: rgb(15, 15, 15);
   max-width: auto;
   width: auto;
   font-family: 'helvetica neue';
+  animation-name: bgc;
+  animation-duration: 6s;
 
 }
 
@@ -14,13 +16,14 @@ h1 {
 .box {
   max-width: 400px;
   margin: 50px auto;
-  background: white;
+  background: rgb(0, 0, 0);
   border-radius: 5px;
-  box-shadow: 5px 5px 15px -5px rgb(0, 0, 0);
+  box-shadow: 10px 10px 15px -5px rgb(0, 0, 0);
+
 }
 
 #heading {
-  background-color: rgb(0, 69, 137);
+  background-color: rgb(0, 177, 150);
   text-align: center;
 }
 
@@ -28,7 +31,8 @@ h1 {
   min-height: 70px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #F1F1F1;
+  border-bottom: 1px solid rgb(0, 177, 150);
+  ;
 }
 
 .item:last-child {
@@ -37,24 +41,25 @@ h1 {
 
 input:checked+p {
   text-decoration: line-through;
-  text-decoration-color: rgb(0, 69, 137);
+  text-decoration-color: rgb(0, 177, 150);
 }
 
 input[type="checkbox"] {
   margin: 20px;
-  
+
 }
 
 .largecheckbox {
   width: 25px;
   height: 25px;
 }
+
 p {
   margin: 0;
   padding: 20px;
   font-size: 20px;
   font-weight: 200;
-  color: rgb(0, 69, 137)
+  color: rgb(0, 177, 150)
 }
 
 form.item {
@@ -63,11 +68,11 @@ form.item {
 }
 
 button {
-  min-height: 50px;
-  width: 50px;
-  border-radius: 50%;
+  min-height: 40px;
+  width: 45px;
+  border-radius: 100%;
   border-color: transparent;
-  background-color: rgb(0, 69, 137);
+  background-color: rgb(0, 177, 150);
   color: #fff;
   font-size: 30px;
   padding-bottom: 6px;
@@ -84,10 +89,14 @@ input[type="text"] {
   font-size: 20px;
   font-weight: 200;
   width: 313px;
+
+
 }
 
 input[type="text"]:focus {
   outline: none;
+  caret-color: rgb(255, 255, 255);
+  color: rgb(0, 177, 150);
   /* border: #E4E9FD 2px ridge; */
   /* box-shadow: inset 0 -3px 0 0 rgb(0, 69, 137); */
 }
@@ -98,14 +107,23 @@ input[type="text"]:focus {
 }
 
 footer {
-  color: white;
-  color: rgba(0, 0, 0, 0.5);
+
+
   text-align: center;
 }
 
 h2 {
   text-align: center;
-  color: rgb(255, 255, 255);
+  color: rgb(15, 15, 15);
 
+}
 
+@keyframes bgc {
+  from {
+    background-color: rgb(1, 124, 124);
+  }
+
+  to {
+    background-color: rgb(15, 15, 15);
+  }
 }
